--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>progress bar</title><link rel="stylesheet" href="styles.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>progress bar</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
-<div class="w3-light-grey">
-  <div class="w3-green" style="height:24px;width:25%"></div>
-</div>
-</body>
+  <body>
+    <div class="introduction">
+      <div class="name">
+        <h2>My name is Tanishq Jain</h2>
+      </div>
+      <div class="info">
+        <p>Below are my progress bars</p>
+      </div>
+    </div>
+
+    <div class="html">
+      <div class="label">HTML</div>
+      <div class="html-bar1">
+        <div class="html-bar2">70%</div>
+      </div>
+    </div>
+
+     <div class="css">
+      <div class="label">CSS</div>
+      <div class="css-bar1">
+        <div class="css-bar2">60%</div>
+      </div>
+    </div>
+
+     <div class="js">
+      <div class="label">JS</div>
+      <div class="js-bar1">
+        <div class="js-bar2">80%</div>
+      </div>
+    </div>
+   
+  </body>
 </html>
-
